# wini-website

./: .editorconfig  .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  flake.nix  justfile  package.json  packages-files.toml  rustfmt.toml  taplo.toml  tsconfig.json  wini.toml
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/macros/: mod.rs
macros/src/macros/wini/: args.rs  cache.rs  component.rs  layout.rs  mod.rs  page.rs
macros/src/utils/wini/: files.rs  js_pkgs.rs  mod.rs  params_from_itemfn.rs  path.rs  result.rs
public/: helpers.g.ts  helpers.js  install  main.css  robots.txt  site.webmanifest
scripts/: README.md  ask-path-packages.sh  clean-js-without-ts.sh  fmt.sh  launch.sh  lint.sh  log.sh  new.sh  on-install.nu  on-install.sh  run.sh  scss.sh  sync-commit-hash.sh  sync-packages.sh  sync-template.sh  terminate.sh  typescript.sh  update-template.sh  yesno.sh
scripts/templates/component/: mod.rs
scripts/templates/layout/: mod.rs
scripts/templates/page/: mod.rs
src/: lib.rs  main.rs  server.rs
src/components/: mod.rs
src/components/notfound/: mod.rs  style.scss
src/cron/: mod.rs
src/layout/header/: mod.rs
src/layout/main/: mod.rs  script.ts  style.scss
src/layouts/header/: mod.rs  style.scss
src/layouts/main/: mod.rs  style.scss
src/pages/doc/: css.sublime-syntax  mod.rs  rust.sublime-syntax  structure.ron  style.scss  style_code.rs
src/pages/doc/pages/: faq.md  features.md  getting_started.md  getting_used_to.md  introduction.md
src/pages/doc/pages/concepts/: components.md  concepts-introduction.md  layout.md  pages.md
src/pages/doc/pages/directory_structure/: directories.md  files_at_root.md  overview.md  src_directory.md
src/pages/doc/pages/dive/: error_handling_and_propagation.md  hosting_your_template.md  procedural_macros.md
src/pages/doc/pages/integrations/: alpinejs.md  htmx.md  sqlx.md
src/pages/doc/pages/maud/: what-is-maud.md  why-maud.md  wini-maud.md
src/pages/hello/: mod.rs
src/shared/: mod.rs
src/shared/wini/: cache.rs  components_files.rs  config.rs  dependencies.rs  env.rs  err.rs  layer.rs  layout.rs  mod.rs  packages_files.rs  response.rs  tsconfig.rs
src/template/: always_loaded.scss  html.rs  meta.rs  mod.rs
src/utils/: hyperscript.rs  mod.rs
src/utils/wini/: buffer.rs  cache.rs  cron.rs  file.rs  handling_file.rs  mod.rs  path.rs
tests/: mod.rs
tests/wini/: canonicalize_relative_path.rs  mod.rs
