# <https://doc.rust-lang.org/cargo/index.html>
[package]
name = "wini-website"
version = "0.1.0"
edition = "2024"


[build-dependencies]
walkdir = "2.5.0"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
colog = "1.3"
ctor = "0.3"
dotenvy = "0.15"
hyper = "1"
http-body-util = "0.1"
itertools = "0.14"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
tower-http = { version = "0.6", features = [
  "compression-gzip",
  "compression-br",
  "fs",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.8"
walkdir = "2.5"
wini-maud = { version = "0.26.5", features = ["axum"] }
wini-macros = { path = "./macros/" }
font-awesome-as-a-crate = "0.3.0"
ron = "0.8.1"
pulldown-cmark = "0.12"
tl = "0.7.8"
syntect = { version = "5.2.0", default-features = false, features = [
  "default-fancy",
] }

[package.metadata.cargo-machete]
ignored = [
  # Used with the procedural macro #[cache]
  "ctor",
]
