# https://doc.rust-lang.org/cargo/index.html
[package]
name = "wini-website"
version = "0.1.0"
edition = "2024"

[build-dependencies]
walkdir = "2.5.0"


[dependencies]
axum = { version = "0.7.6", features = ["macros"] }
tower-http = { version = "0.6.1", features = [
    "compression-gzip",
    "compression-br",
    "fs",
]}
hyper = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
http-body-util = "0.1"
mime_guess = "2"
wini-maud = { version = "0.26", features = ["axum"]}
wini-macros = { path = "./macros/"}
dotenvy = "0.15"
regex = "1"
walkdir = "2.5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
colog = "1.3.0"
log = "0.4.22"
strum = "0.26.3"
strum_macros = "0.26.4"
serde_json = "1.0.132"
itertools = "0.13.0"
ctor = "0.2.8"
font-awesome-as-a-crate = "0.3.0"
ron = "0.8.1"
pulldown-cmark = "0.12"
tl = "0.7.8"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"]}


[package.metadata.cargo-machete]
ignored = [
    # Used with the procedural macro #[cache]
    "ctor"
]
